feat: Added Indian Phone Number

--- a/index.html
+++ b/index.html
@@ -437,10 +437,10 @@
                     <div class="contact-info-container">
                         <ul>
                             <li>
-                                <a href="tel:61-420-076-765" title="">+61-430-076-765</a>
+                                <a href="tel:+61420076765" title="">+61-430-076-765</a>
                             </li>
                             <li>
-                                <a href="tel:61-420-076-765" title="">+61-430-076-765</a>
+                                <a href="tel:+919167966765" title="">+91-9167-966-765</a>
                             </li>
                             <li>
                                 <a href="mailto:tinugkp@gmail.com">tinugkp@gmail.com</a>
