feat: Added 2023 Reel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="wrapper">
                 <h1>
-                    <a href="/">Ashish Pandey</a>
+                    <a href="https://ap-portfolio-delta.vercel.app/">Ashish Pandey</a>
                 </h1>
                 <div class="hamburger" title="Open Menu">
                     <i class="fa-solid fa-bars"></i>
@@ -52,9 +52,22 @@
             <section class="compositing-reel" id="compositing-reel">
                 <div class="wrapper">
                     <h2>compositing reel</h2>
-                    <figure>
-                        <video src="./assets/videos/showreel.mp4" poster="./assets/images/thumbnail.png" controls></video>
-                    </figure>
+                    <ul class="ap-reel-tabs">
+                        <li class="ap-reel-tab active">2023</li>
+                        <li class="ap-reel-tab">2022</li>
+                    </ul>
+                    <ul class="ap-reel-tab-items">
+                        <li class="ap-reel-tab-item active">
+                            <figure>
+                                <video src="./assets/videos/showreel-2023.mov" poster="./assets/images/thumbnail-2023.png" controls></video>
+                            </figure>
+                        </li>
+                        <li class="ap-reel-tab-item">
+                            <figure>
+                                <video src="./assets/videos/showreel-2022.mp4" poster="./assets/images/thumbnail-2022.png" controls></video>
+                            </figure>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="compositing-shots" id="compositing-shots">
@@ -285,7 +298,7 @@
                     <ul>
                         <li>
                             <div class="work-info">
-                                <span class="working-year">august 2023 - present</span>
+                                <span class="working-year">august 2023 - august 2024</span>
                                 <span class="working-location">DNEG - SYDNEY, Australia</span>
                                 <h3 class="designation">digital compositor vfx</h3>
                             </div>
