feat: Minor updates - added two more job locations & 2024 reel

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
             <section class="compositing-reel" id="compositing-reel">
                 <div class="wrapper">
                     <h2>compositing reel</h2>
-                    <ul class="ap-reel-tabs">
+                    <!-- <ul class="ap-reel-tabs">
                         <li class="ap-reel-tab active">2023</li>
                         <li class="ap-reel-tab">2022</li>
-                    </ul>
+                    </ul> -->
                     <ul class="ap-reel-tab-items">
                         <li class="ap-reel-tab-item active">
                             <figure>
-                                <video src="./assets/videos/showreel-2023.mov" poster="./assets/images/thumbnail-2023.png" controls></video>
+                                <video src="./assets/videos/showreel-2024.mov" poster="./assets/images/thumbnail-2024.png" controls></video>
                             </figure>
                         </li>
-                        <li class="ap-reel-tab-item">
+                        <!-- <li class="ap-reel-tab-item">
                             <figure>
                                 <video src="./assets/videos/showreel-2022.mp4" poster="./assets/images/thumbnail-2022.png" controls></video>
                             </figure>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
@@ -298,6 +298,26 @@
                     <ul>
                         <li>
                             <div class="work-info">
+                                <span class="working-year">february 2025 - Present</span>
+                                <span class="working-location">DNEG - SYDNEY, Australia</span>
+                                <h3 class="designation">digital compositor vfx</h3>
+                            </div>
+                            <figure>
+                                <img src="./assets/images/resume/sydney.jpg" alt="">
+                            </figure>
+                        </li>
+                        <li>
+                            <div class="work-info">
+                                <span class="working-year">sept 2024 - dec 2024</span>
+                                <span class="working-location">BELOFX - Mumbai</span>
+                                <h3 class="designation">SENIOR COMPOSITOR VFX</h3>
+                            </div>
+                            <figure>
+                                <img src="./assets/images/resume/mumbai.jpg" alt="">
+                            </figure>
+                        </li>
+                        <li>
+                            <div class="work-info">
                                 <span class="working-year">august 2023 - august 2024</span>
                                 <span class="working-location">DNEG - SYDNEY, Australia</span>
                                 <h3 class="designation">digital compositor vfx</h3>
@@ -444,7 +464,7 @@
                             </figcaption>
                         </div>
                         <div class="about-text-content">
-                            <p>Hi, I am a resident of INDIA. I completed my diploma in Vfx and Animation course from Haridwar. I started my career as Roto Paint artist in 2010. <br><br> In the past years I have been furthering my experience on several different projects from television to feature films for the visual effects industry.. <br> In my career, I have worked in multiple roles of the pipeline with diverse teams of artists under accelerated deadlines. Furthermore, my key specialties include Chroma keying, 2D composting, CG and live plate compositing, FX comp 2D Paint, Prep, Roto. <br><br> Worked on Projects like.. <br> <strong>Sin City:</strong> A Dame to Kill, Deadpool 2, Pacific Rim Uprising, Justice league, Assassin's Creed, The King Historical, Wonder Woman 84, Dune, Venom 2, The Matrix Resurrections, Furiosa etc.</p>
+                            <p>Hi, I'm currently working in DNEG Australia - resident of India. I completed my diploma in Vfx and Animation course from Haridwar. I started my career as Roto Paint artist in 2010. <br><br> In the past years I have been furthering my experience on several different projects from television to feature films for the visual effects industry.. <br> In my career, I have worked in multiple roles of the pipeline with diverse teams of artists under accelerated deadlines. Furthermore, my key specialties include Chroma keying, 2D composting, CG and live plate compositing, FX comp 2D Paint, Prep, Roto. <br><br> Worked on Projects like.. <br> <strong>Sin City:</strong> A Dame to Kill, Deadpool 2, Pacific Rim Uprising, Justice league, Assassin's Creed, The King Historical, Wonder Woman 84, Dune, Venom 2, The Matrix Resurrections, Furiosa etc.</p>
                         </div>
                     </div>
                     <div class="contact-info-container">
